--- a/blog.html
+++ b/blog.html
@@ -396,7 +396,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="wa.me/923251136814">MR.WEBICON</a>
+        Designed by Abdullah Aslam
       </div>
     </div>
   </footer><!-- End Footer -->
