--- a/contact.html
+++ b/contact.html
@@ -244,7 +244,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="wa.me/923251136814">MR.WEBICON</a>
+        Designed by Abdullah Aslam
       </div>
     </div>
   </footer><!-- End Footer -->
