--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CREDEVIC - Mrwebicon</title>
+  <title>CREDEVIC | Abdullah Aslam</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -351,7 +351,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="wa.me/923251136814">MR.WEBICON</a>
+        Designed by  Abdullah Aslam
       </div>
     </div>
   </footer><!-- End Footer -->
