--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -224,7 +224,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="wa.me/923251136814">MR.WEBICON</a>
+        Designed by Abdullah Aslam
       </div>
     </div>
   </footer><!-- End Footer -->
