--- a/services.html
+++ b/services.html
@@ -359,7 +359,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="wa.me/923251136814">MR.WEBICON</a>
+        Designed by Abdullah Aslam
       </div>
     </div>
   </footer><!-- End Footer -->
